--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   
   
 
-  <nav class="main-navbar">
+  <nav class="main-navbar resize transition">
     <div class="introName">STEVE WANG</div>
     
     <div class="sub-navbar">
