--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,10 @@
 
   <nav class="main-navbar resize transition">
     <div class="introName">STEVE WANG</div>
-    
     <div class="sub-navbar">
-      <a class="menu" id="mebutton">Me</a>
-      <a class="menu" id="pastbutton">Past</a>
-      <a class="menu" id="experiencebutton">Experience</a>
-      <a class="contact" id="contactbutton">Contact</a>
+      <a class="menu" id="mebutton">&nbsp;Me</a>
+      <a class="menu" id="pastbutton">&nbsp;Past</a>
+      <a class="menu" id="experiencebutton">&nbsp;Experience</a>
     </div>
     
   </nav>  
